--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,13 +13,13 @@ TARGET_UPSTREAM = "https://registry-1.docker.io"
 [env.production]
 name = "cloudflare-docker-proxy"
 routes = [
-  { pattern = "docker.libcuda.so", custom_domain = true },
-  { pattern = "quey.libcuda.so", custom_domain = true },
-  { pattern = "gcr.libcuda.so", custom_domain = true },
-  { pattern = "k8s-gcr.libcuda.so", custom_domain = true },
-  { pattern = "k8s.libcuda.so", custom_domain = true },
-  { pattern = "ghcr.libcuda.so", custom_domain = true },
-  { pattern = "cloudsmith.libcuda.so", custom_domain = true },
+  { pattern = "docker.ikubernetes.xyz", custom_domain = true },
+  { pattern = "quey.ikubernetes.xyz", custom_domain = true },
+  { pattern = "gcr.ikubernetes.xyz", custom_domain = true },
+  { pattern = "k8s-gcr.ikubernetes.xyz", custom_domain = true },
+  { pattern = "k8s.ikubernetes.xyz", custom_domain = true },
+  { pattern = "ghcr.ikubernetes.xyz", custom_domain = true },
+  { pattern = "cloudsmith.ikubernetes.xyz", custom_domain = true },
 ]
 
 [env.production.vars]
